--- a/pronombres2.html
+++ b/pronombres2.html
@@ -25,16 +25,16 @@
 		</ul>
 	</nav>
 
-	<header id="test"><h1>Traduce este texto</h1></header>
+	<header id="test"><h1>Selecciona la respuesta correcta</h1></header>
 	<section>
 		<article id="contenedor">
 			<div id="eliminado">
 				<h2>She has a smile</h2>
 				<form name="botones1" class="botones">
-					<input type="button" name="boton1" class="p" value="" style="background: url(images/Oracion1.jpg)" onclick="two(this)"/>
-					<input type="button" name="boton1" class="p" value="" style="background: url(images/Oracion2.jpg)" onclick="two(this)"/>
-					<input type="button" name="boton1" class="p" value="" style="background: url(images/Oracion3.jpg)" onclick="two(this)"/>
-					<input type="button" name="boton1" class="p" value="" style="background: url(images/Oracion4.jpg)" onclick="two(this)"/>
+					<input type="button" name="boton1" class="p" value="" style="background: url(images/Oracion1.jpg)" onclick="one(this)"/>
+					<input type="button" name="boton2" class="p" value="" style="background: url(images/Oracion2.jpg)" onclick="two(this)"/>
+					<input type="button" name="boton3" class="p" value="" style="background: url(images/Oracion3.jpg)" onclick="two(this)"/>
+					<input type="button" name="boton4" class="p" value="" style="background: url(images/Oracion4.jpg)" onclick="two(this)"/>
 				</form>
 			</div>
  		</article>
@@ -42,12 +42,12 @@
  	<section>
 		<article id="contenedor">
 			<div id="eliminado">
-				<h2>She and He</h2>
+				<h2>He drink a lot</h2>
 				<form name="botones2" class="botones">
-					<input type="button" name="boton1" class="p" value="Yo y tu"  onclick="two2(this)"/>
-					<input type="button" name="boton2" class="p" value="Ella y Él"   onclick="one2(this)">
-					<input type="button" name="boton3" class="p" value="Ella"  onclick="two2(this)">
-					<input type="button" name="boton4" class="p" value="Él y Ella" onclick="two2(this)">
+					<input type="button" name="boton1" class="p" value="" style="background: url(images/Oracion5.jpg)" onclick="two2(this)"/>
+					<input type="button" name="boton2" class="p" value="" style="background: url(images/Oracion6.jpg)" onclick="one2(this)"/>
+					<input type="button" name="boton3" class="p" value="" style="background: url(images/Oracion7.jpg)" onclick="two2(this)"/>
+					<input type="button" name="boton4" class="p" value="" style="background: url(images/Oracion8.jpg)" onclick="two2(this)"/>
 				</form>
 			</div>
  		</article>
@@ -55,12 +55,12 @@
  	<section>
 		<article id="contenedor">
 			<div id="eliminado">
-				<h2>They and We</h2>
+				<h2>They in the morning play</h2>
 				<form name="botones3" class="botones">
-					<input type="button" name="boton1" class="p" value="Nosotros y Ellos"  onclick="two3(this)"/>
-					<input type="button" name="boton2" class="p" value="Tu y Yo"   onclick="two3(this)">
-					<input type="button" name="boton3" class="p" value="Ellos Y Nosotros"  onclick="one3(this)">
-					<input type="button" name="boton4" class="p" value="Ella y El" onclick="two3(this)">
+					<input type="button" name="boton1" class="p" value="" style="background: url(images/Oracion9.jpg)" onclick="two3(this)"/>
+					<input type="button" name="boton2" class="p" value="" style="background: url(images/Oracion10.jpg)" onclick="two3(this)"/>
+					<input type="button" name="boton3" class="p" value="" style="background: url(images/Oracion11.jpg)" onclick="two3(this)"/>
+					<input type="button" name="boton4" class="p" value="" style="background: url(images/Oracion12.jpg)" onclick="one3(this)"/>
 				</form>
 			</div>
  		</article>
@@ -68,12 +68,12 @@
  	<section>
 		<article id="contenedor">
 			<div id="eliminado">
-				<h2>Ellos están Trabajando</h2>
+				<h2>She is working with he</h2>
 				<form name="botones4" class="botones">
-					<input type="button" name="boton1" class="p" value="We are working"  onclick="two4(this)"/>
-					<input type="button" name="boton2" class="p" value="They are working"   onclick="one4(this)">
-					<input type="button" name="boton3" class="p" value="They are reading"  onclick="two4(this)">
-					<input type="button" name="boton4" class="p" value="She is playing" onclick="two4(this)">
+					<input type="button" name="boton1" class="p" value="" style="background: url(images/Oracion13.jpg)" onclick="two4(this)"/>
+					<input type="button" name="boton2" class="p" value="" style="background: url(images/Oracion14.jpg)" onclick="two4(this)"/>
+					<input type="button" name="boton3" class="p" value="" style="background: url(images/Oracion15.jpg)" onclick="one4(this)"/>
+					<input type="button" name="boton4" class="p" value="" style="background: url(images/Oracion16.jpg)" onclick="two4(this)"/>
 				</form>
 			</div>
  		</article>
@@ -81,12 +81,12 @@
  	<section>
 		<article id="contenedor">
 			<div id="eliminado">
-				<h2>Ella es hermosa</h2>
+				<h2>She is a good runner</h2>
 				<form name="botones5" class="botones">
-					<input type="button" name="boton1" class="p" value="She is ugly"  onclick="two5(this)"/>
-					<input type="button" name="boton2" class="p" value="He is sad"   onclick="two5(this)">
-					<input type="button" name="boton3" class="p" value="She is happy"  onclick="two5(this)">
-					<input type="button" name="boton4" class="p" value="She is beautiful" onclick="one5(this)">
+					<input type="button" name="boton1" class="p" value="" style="background: url(images/Oracion17.jpg)" onclick="two5(this)"/>
+					<input type="button" name="boton2" class="p" value="" style="background: url(images/Oracion18.jpg)" onclick="one5(this)"/>
+					<input type="button" name="boton3" class="p" value="" style="background: url(images/Oracion19.jpg)" onclick="two5(this)"/>
+					<input type="button" name="boton4" class="p" value="" style="background: url(images/Oracion20.jpg)" onclick="two5(this)"/>
 				</form>
 			</div>
  		</article>
@@ -94,12 +94,12 @@
  	<section>
 		<article id="contenedor">
 			<div id="eliminado">
-				<h2>I am playing</h2>
+				<h2>He is crying</h2>
 				<form name="botones6" class="botones">
-					<input type="button" name="boton1" class="p" value="Yo estoy jugando"  onclick="one6(this)"/>
-					<input type="button" name="boton2" class="p" value="Yo estoy triste"   onclick="two6(this)">
-					<input type="button" name="boton3" class="p" value="Yo estoy trabajando"  onclick="two6(this)">
-					<input type="button" name="boton4" class="p" value="Él está jugando" onclick="two6(this)">
+					<input type="button" name="boton1" class="p" value="" style="background: url(images/Oracion21.jpg)" onclick="one6(this)"/>
+					<input type="button" name="boton2" class="p" value="" style="background: url(images/Oracion22.jpg)" onclick="two6(this)"/>
+					<input type="button" name="boton3" class="p" value="" style="background: url(images/Oracion23.jpg)" onclick="two6(this)"/>
+					<input type="button" name="boton4" class="p" value="" style="background: url(images/Oracion24.jpg)" onclick="two6(this)"/>
 				</form>
 			</div>
  		</article>
@@ -107,12 +107,12 @@
  	<section>
 		<article id="contenedor">
 			<div id="eliminado">
-				<h2>I am buying shoes</h2>
+				<h2>They are selling</h2>
 				<form name="botones7" class="botones">
-					<input type="button" name="boton1" class="p" value="Yo estoy viendo zapatos"  onclick="two7(this)"/>
-					<input type="button" name="boton2" class="p" value="Ella está comprando zapatos"   onclick="two7(this)">
-					<input type="button" name="boton3" class="p" value="El está comprando zapatos"  onclick="two7(this)">
-					<input type="button" name="boton4" class="p" value="Yo estoy comprando zapatos" onclick="one7(this)">
+					<input type="button" name="boton1" class="p" value="" style="background: url(images/Oracion25.jpg)" onclick="two7(this)"/>
+					<input type="button" name="boton2" class="p" value="" style="background: url(images/Oracion26.jpg)" onclick="two7(this)"/>
+					<input type="button" name="boton3" class="p" value="" style="background: url(images/Oracion27.jpg)" onclick="two7(this)"/>
+					<input type="button" name="boton4" class="p" value="" style="background: url(images/Oracion28.jpg)" onclick="one7(this)"/>
 				</form>
 			</div>
  		</article>
@@ -120,12 +120,12 @@
  	<section>
 		<article id="contenedor">
 			<div id="eliminado">
-				<h2>Nosotros estamos escuchando música</h2>
+				<h2>We are singing</h2>
 				<form name="botones8" class="botones">
-					<input type="button" name="boton1" class="p" value="I am listening music"  onclick="two8(this)"/>
-					<input type="button" name="boton2" class="p" value="We are listening music"   onclick="one8(this)">
-					<input type="button" name="boton3" class="p" value="She is listening music"  onclick="two8(this)">
-					<input type="button" name="boton4" class="p" value="He is listening music" onclick="two8(this)">
+					<input type="button" name="boton1" class="p" value="" style="background: url(images/Oracion29.jpg)" onclick="two8(this)"/>
+					<input type="button" name="boton2" class="p" value="" style="background: url(images/Oracion30.jpg)" onclick="two8(this)"/>
+					<input type="button" name="boton3" class="p" value="" style="background: url(images/Oracion31.jpg)" onclick="two8(this)"/>
+					<input type="button" name="boton4" class="p" value="" style="background: url(images/Oracion32.jpg)" onclick="one8(this)"/>
 				</form>
 			</div>
  		</article>
@@ -133,12 +133,12 @@
  	<section>
 		<article id="contenedor">
 			<div id="eliminado">
-				<h2>Yo estoy jugando</h2>
+				<h2>I am exercising</h2>
 				<form name="botones9" class="botones">
-					<input type="button" name="boton1" class="p" value="I am playing"  onclick="one9(this)"/>
-					<input type="button" name="boton2" class="p" value="She is working"   onclick="two9(this)">
-					<input type="button" name="boton3" class="p" value="He is talking"  onclick="two9(this)">
-					<input type="button" name="boton4" class="p" value="They are crazy" onclick="two9(this)">
+					<input type="button" name="boton1" class="p" value="" style="background: url(images/Oracion33.jpg)" onclick="two9(this)"/>
+					<input type="button" name="boton2" class="p" value="" style="background: url(images/Oracion34.jpg)" onclick="one9(this)"/>
+					<input type="button" name="boton3" class="p" value="" style="background: url(images/Oracion35.jpg)" onclick="two9(this)"/>
+					<input type="button" name="boton4" class="p" value="" style="background: url(images/Oracion36.jpg)" onclick="two9(this)"/>
 				</form>
 			</div>
  		</article>
@@ -146,12 +146,12 @@
  	<section>
 		<article id="contenedor">
 			<div id="eliminado">
-				<h2>Ella está feliz</h2>
+				<h2>She is afflicted</h2>
 				<form name="botones10" class="botones">
-					<input type="button" name="boton1" class="p" value="She is sad"   onclick="final2(this)">
-					<input type="button" name="boton2" class="p" value="He is happy"   onclick="final2(this)">
-					<input type="button" name="boton3" class="p" value="They are happy"  onclick="final2(this)">
-					<input type="button" name="boton4" class="p" value="She is happy" onclick="final1(this)">
+					<input type="button" name="boton1" class="p" value="" style="background: url(images/Oracion37.jpg)" onclick="one10(this)"/>
+					<input type="button" name="boton2" class="p" value="" style="background: url(images/Oracion38.jpg)" onclick="two10(this)"/>
+					<input type="button" name="boton3" class="p" value="" style="background: url(images/Oracion39.jpg)" onclick="two10(this)"/>
+					<input type="button" name="boton4" class="p" value="" style="background: url(images/Oracion40.jpg)" onclick="two10(this)"/>
 				</form>
 			</div>
  		</article>
