Responsive Design y botón en pronombres

--- a/pronombres.html
+++ b/pronombres.html
@@ -152,7 +152,14 @@
 					<input type="button" name="boton2" class="p" value="He is happy"   onclick="final2(this)">
 					<input type="button" name="boton3" class="p" value="They are happy"  onclick="final2(this)">
 					<input type="button" name="boton4" class="p" value="She is happy" onclick="final1(this)">
+
+					<a href="pronombres2.html" class="botonc botond">Siguiente nivel</a>
 				</form>
+
+				
+
+				
+
 			</div>
  		</article>
  	</section>
