Botones en todos los temas y textos completos
Las instrucciones listas, errores ortográficos corregidos y un botón de
siguiente nivel en cada tema.

--- a/DiasDeLaSemana.html
+++ b/DiasDeLaSemana.html
@@ -150,6 +150,8 @@
 					<input type="button" name="boton2" class="p" value="Wednesday"   onclick="final2(this)">
 					<input type="button" name="boton3" class="p" value="Friday"  onclick="final2(this)">
 					<input type="button" name="boton4" class="p" value="Saturday" onclick="final2(this)">
+
+					<a href="pronombres2.html" class="botonc botond">Siguiente nivel</a>
 				</form>
 			</div>
  		</article>
