--- a/Futuro.html
+++ b/Futuro.html
@@ -150,6 +150,8 @@
 					<input type="button" name="boton2" class="p" value="Yo estare triste"  onclick="final2(this)">
 					<input type="button" name="boton3" class="p" value="Tú estarás feliz"  onclick="final2(this)">
 					<input type="button" name="boton4" class="p" value="Ellos serán felices" onclick="final1(this)">
+
+					<a href="pronombres2.html" class="botonc botond">Siguiente nivel</a>
 				</form>
 			</div>
  		</article>
