--- a/Presente.html
+++ b/Presente.html
@@ -150,7 +150,10 @@
 					<input type="button" name="boton2" class="p" value="¿Por qué te gusta bailar?"   onclick="final2(this)">
 					<input type="button" name="boton3" class="p" value="¿Por qué te gusta la música?"  onclick="final1(this)">
 					<input type="button" name="boton4" class="p" value="¿Por qué te gusta gritar?" onclick="final2(this)">
+
+					<a href="pronombres2.html" class="botonc botond">Siguiente nivel</a>
 				</form>
+
 			</div>
  		</article>
  	</section>
