--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 						<header>
 							<h1><a href="#" id="logo">Inglés Básico Interactivo</a></h1>
 							<hr />
-							<span class="byline">Bienvenido a Inglés Básico Interactivo, el sitio donde podrás aprender lo básico del inglés de una manera rápida, fácil y divertida.</span>
+							<span class="byline">Bienvenido a Inglés Básico Interactivo, el sitio donde podrás aprender y practicar lo básico del inglés de una manera rápida, fácil y divertida.</span>
 						</header>
 						<footer>
 							<a href="#banner" class="button circled scrolly">Comenzar</a>
@@ -158,7 +158,18 @@
 					<header>
 						<h2>Instrucciones</h2>
 						<span class="byline">
-						Las instrucciones cuando son solo escritas o con imágenes son difíciles de entender, por tal motivo hemos preferido hacer las intrucciones en un video para que de ésta manera sea más sencillo entender y a la vez más interactivo.
+						En nuestra página encontrarás temas básicos del inglés. Puedes realizar
+						ejercicios que te ayudarán a practicar tus conocimientos básicos y así
+						abrir las puertas al estudio del inglés. Cada una de estas secciones de
+						ejercicios contienen varios niveles con 10 ejercicios cada uno,
+						donde se te calificará sobre 10 puntos de acuerdo a tus aciertos. 
+						La idea no es ser duros o extremistas, sino interactivos y flexibles
+						con el aprendizaje, por este motivo tendrás la oportunidad de realizar
+						cuantas veces desees los ejercicios y comenzar desde cero.
+						Debes realizar todos los ejercicios en orden para obtener tu puntuación completa.
+						La puntuación es sobre 10 en cada uno de los niveles y temas.
+						También podrás investigar muchos temas que te facilitarán el aprendizaje teórico de este
+						bello y fácil idioma.
 						</span>
 					</header>
                     <div id="reproductormarco">
@@ -193,16 +204,16 @@
 								<h3><a href="#">¿Que es IEB?</a></h3>
 							</header>
 							<p>
-								IBE son las siglas de Interactive Basic English o Ingles Basico Interactivo. Creamos esta página con la intención de facilitar los contenidos basicos del ingles, a las personas que estan empezando a aprender el ingles y que mejor manera de hacerlo que de una manera interactiva.
+								IBE son las siglas de Interactive Basic English o Inglés Básico Interactivo. Creamos esta página con la intención de facilitar los contenidos básicos del inglés, a las personas que están empezando a aprender el inglés; y que mejor manera de hacerlo que de una forma interactiva.
 							</p>
 						</article>
 						<article class="4u special">
 							<a href="http://mdomaradzki.deviantart.com/art/Home-Bound-Train-II-338912191" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
 							<header>
-								<h3><a href="#">¿Quienes estan constrayendo IEB?</a></h3>
+								<h3><a href="#">¿Quienes están constrayendo IEB?</a></h3>
 							</header>
 							<p>
-								Somos un pequeño grupo de personas con concimientos en ingles y en el diseño web. Queriamos juntar esos conocimietos y colaborar con la educación usando la tecnologia.
+								Somos un pequeño grupo de personas con concimientos en inglés y en el diseño web. Queríamos juntar esos conocimietos y colaborar con la educación usando la tecnología.
 							</p>
 						</article>
 						<article class="4u special">
