--- a/Animales.html
+++ b/Animales.html
@@ -150,6 +150,8 @@
 					<input type="button" name="boton2" class="p" value="Fly"   onclick="final2(this)">
 					<input type="button" name="boton3" class="p" value="Dog"  onclick="final2(this)">
 					<input type="button" name="boton4" class="p" value="Mouse" onclick="final1(this)">
+
+					<a href="pronombres2.html" class="botonc botond">Siguiente nivel</a>
 				</form>
 			</div>
  		</article>
