--- a/Números.html
+++ b/Números.html
@@ -138,6 +138,7 @@
 					<input type="button" name="boton3" class="p" value="One hundred"  onclick="two9(this)">
 					<input type="button" name="boton4" class="p" value="One hundred and sixty" onclick="two9(this)">
 				</form>
+
 			</div>
  		</article>
  	</section>
@@ -150,6 +151,8 @@
 					<input type="button" name="boton2" class="p" value="Five hundred"   onclick="final2(this)">
 					<input type="button" name="boton3" class="p" value="One thousand"  onclick="final2(this)">
 					<input type="button" name="boton4" class="p" value="Nine hundred" onclick="final1(this)">
+
+					<a href="pronombres2.html" class="botonc botond">Siguiente nivel</a>
 				</form>
 			</div>
  		</article>
