--- a/Pasado.html
+++ b/Pasado.html
@@ -150,6 +150,8 @@
 					<input type="button" name="boton2" class="p" value="¿Por qué comiste?"   onclick="final2(this)">
 					<input type="button" name="boton3" class="p" value="¿Donde comiste?"  onclick="final2(this)">
 					<input type="button" name="boton4" class="p" value="¿Qué comiste?" onclick="final1(this)">
+
+					<a href="pronombres2.html" class="botonc botond">Siguiente nivel</a>
 				</form>
 			</div>
  		</article>
