--- a/VerboToBe.html
+++ b/VerboToBe.html
@@ -150,6 +150,8 @@
 					<input type="button" name="boton2" class="p" value="Tú estás cansado"   onclick="final2(this)">
 					<input type="button" name="boton3" class="p" value="Ellos están cansados"  onclick="final1(this)">
 					<input type="button" name="boton4" class="p" value="Nosotros estamos cansados" onclick="final2(this)">
+
+					<a href="pronombres2.html" class="botonc botond">Siguiente nivel</a>
 				</form>
 			</div>
  		</article>
