--- a/Colores.html
+++ b/Colores.html
@@ -7,9 +7,10 @@
 	<script src="java.js"></script>
 	<script src="jquery-1.3.2.min.js" type="text/javascript"></script>   
 	<script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
-	<meta name="description" content="" />
-	<meta name="keywords" content="" />
-	<link rel="stylesheet" href="css/Colores.css" />
+	<meta name="description" content="Investiga, aprende y practica lo básico del inglés de una manera interactiva" />
+	<meta name="keywords" content="ingles basico interactivo, Ingles Basico Interactivo,Ingles, Ingles gratis, ingles gratis, curso de ingles, ingles facil, gratis ingles, aprender ingles, curso de ingles facil y rapido,curso de ingles facil y gratis, curso de ingles facil de aprender" />
+	<meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1"/>
+	<link rel="stylesheet" href="css/colores.css" />
 </head>
 <body>
 	<nav id="nav">
