--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<title>Ingles Basico Interactivo</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
+		<meta name="description" content="Investiga, aprende y practica lo básico del inglés de una manera interactiva" />
+		<meta name="keywords" content="ingles basico interactivo, Ingles Basico Interactivo,Ingles, Ingles gratis, ingles gratis, curso de ingles, ingles facil, gratis ingles, aprender ingles, curso de ingles facil y rapido,curso de ingles facil y gratis, curso de ingles facil de aprender" />
 		<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600" rel="stylesheet" type="text/css" />
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
