--- a/pronombres2.html
+++ b/pronombres2.html
@@ -8,9 +8,9 @@
 	<script src="java.js"></script>
 	<script src="jquery-1.3.2.min.js" type="text/javascript"></script>   
 	<script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
-	<meta viewport
-	<meta name="description" content="" />
-	<meta name="keywords" content="" />
+	<meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1"/>
+	<meta name="description" content="Investiga, aprende y practica lo básico del inglés de una manera interactiva" />
+		<meta name="keywords" content="ingles basico interactivo, Ingles Basico Interactivo,Ingles, Ingles gratis, ingles gratis, curso de ingles, ingles facil, gratis ingles, aprender ingles, curso de ingles facil y rapido,curso de ingles facil y gratis, curso de ingles facil de aprender" />
 	<link rel="stylesheet" href="css/pronombres2.css" />
 </head>
 <body>
